--- a/az-devops/Cargo.toml
+++ b/az-devops/Cargo.toml
@@ -14,4 +14,7 @@ azure_devops_rust_api = { version = "0.15.1", features = [
 ] }
 azure_identity = "0.18.1"
 dotenvy = "0.15.7"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+time = { version = "0.3.31", features = ["serde"] }
 tokio = { version = "1.35.1", features = ["full"] }
