--- a/az-devops/Cargo.toml
+++ b/az-devops/Cargo.toml
@@ -12,9 +12,10 @@ azure_devops_rust_api = { version = "0.15.1", features = [
     "wit",
     "graph",
 ] }
-azure_identity = "0.18.1"
-dotenvy = "0.15.7"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 time = { version = "0.3.31", features = ["serde"] }
+
+[dev-dependencies]
+dotenvy = "0.15.7"
 tokio = { version = "1.35.1", features = ["full"] }
