--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 az-devops = { path = "../az-devops" }
 dotenvy = "0.15.7"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["full"] }
