added work item support

--- a/az-devops/Cargo.toml
+++ b/az-devops/Cargo.toml
@@ -14,7 +14,7 @@ azure_devops_rust_api = { version = "0.15.1", features = [
 ] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-time = { version = "0.3.31", features = ["serde"] }
+time = { version = "0.3.31", features = ["serde", "parsing"] }
 
 [dev-dependencies]
 dotenvy = "0.15.7"
