--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 az-devops = { path = "../az-devops" }
 dotenvy = "0.15.7"
+itertools = "0.12.0"
+plotly = "0.8.4"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["full"] }
