--- a/viz/Cargo.toml
+++ b/viz/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "toki-api"
+name = "viz"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,6 +9,7 @@ edition = "2021"
 az-devops = { path = "../az-devops" }
 dotenvy = "0.15.7"
 itertools = "0.12.0"
+plotly = "0.8.4"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["full"] }
