--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["full"] }
 time = { version = "0.3.31", features = ["serde", "parsing"] }
+axum = { version = "0.7.3", features = ["ws", "macros"] }
