--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -11,6 +11,23 @@ dotenvy = "0.15.7"
 itertools = "0.12.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+serde_with = "3.4.0"
 tokio = { version = "1.35.1", features = ["full"] }
 time = { version = "0.3.31", features = ["serde", "parsing"] }
 axum = { version = "0.7.3", features = ["ws", "macros"] }
+axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
+config = "0.13.4"
+tracing = { version = "0.1.40", features = ["attributes"] }
+tracing-subscriber = { version = "0.3.18", features = [
+    "env-filter",
+    "time",
+    "local-time",
+] }
+futures = "0.3.30"
+futures-util = { version = "0.3.30", default-features = false, features = [
+    "sink",
+    "std",
+] }
+tower = { version = "0.4.13", features = ["util"] }
+tower-http = { version = "0.5.0", features = ["trace"] }
+strum = { version = "0.25.0", features = ["derive"] }
