--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -37,3 +37,8 @@ sqlx = { version = "0.7.3", features = [
     "tls-rustls",
     "time",
 ] }
+axum-login = "0.12.0"
+thiserror = "1.0.56"
+oauth2 = "4.4.2"
+reqwest = { version = "0.11.23", features = ["json"] }
+async-trait = "0.1.77"
