--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -42,3 +42,4 @@ thiserror = "1.0.56"
 oauth2 = "4.4.2"
 reqwest = { version = "0.11.23", features = ["json"] }
 async-trait = "0.1.77"
+crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
