--- a/app/package.json
+++ b/app/package.json
@@ -26,10 +26,12 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@tanstack/react-router": "1.13.0",
+    "@tanstack/react-table": "^8.11.7",
     "@tanstack/router-devtools": "^1.13.0",
     "@tanstack/router-vite-plugin": "^1.12.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.3",
     "ky": "^1.2.0",
     "lucide-react": "^0.316.0",
