--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "@dicebear/core": "^7.0.4",
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/jetbrains-mono": "^5.0.19",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -37,10 +39,13 @@
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-resizable-panels": "^1.0.10",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "ts-pattern": "^5.0.6"
+    "ts-pattern": "^5.0.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.7",
