--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
     "@tanstack/router-vite-plugin": "^1.12.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.3",
     "ky": "^1.2.0",
