--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -36,6 +36,7 @@ sqlx = { version = "0.7.3", features = [
     "runtime-tokio",
     "tls-rustls",
     "time",
+    "migrate",
 ] }
 axum-login = "0.12.0"
 thiserror = "1.0.56"
