--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dicebear/collection": "^7.0.4",
-    "@dicebear/core": "^7.0.4",
-    "@fontsource-variable/inter": "^5.0.16",
-    "@fontsource-variable/jetbrains-mono": "^5.0.19",
+    "@dicebear/collection": "^8.0.0",
+    "@dicebear/core": "^8.0.0",
+    "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource-variable/jetbrains-mono": "^5.0.20",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,46 +25,46 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.20.5",
-    "@tanstack/react-query-devtools": "^5.20.5",
-    "@tanstack/react-router": "1.16.0",
-    "@tanstack/react-table": "^8.11.8",
-    "@tanstack/router-devtools": "^1.16.0",
-    "@tanstack/router-vite-plugin": "^1.16.1",
+    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.28.6",
+    "@tanstack/react-router": "1.22.2",
+    "@tanstack/react-table": "^8.15.0",
+    "@tanstack/router-devtools": "^1.22.2",
+    "@tanstack/router-vite-plugin": "^1.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
+    "cmdk": "0.2.1",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.5",
-    "ky": "^1.2.0",
-    "lucide-react": "^0.330.0",
+    "framer-motion": "^11.0.20",
+    "ky": "^1.2.2",
+    "lucide-react": "^0.362.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-resizable-panels": "^2.0.8",
-    "sonner": "^1.4.0",
-    "tailwind-merge": "^2.2.1",
+    "react-hook-form": "^7.51.1",
+    "react-resizable-panels": "^2.0.13",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "ts-pattern": "^5.0.6",
+    "ts-pattern": "^5.0.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "install": "^0.13.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.1"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.3"
   }
 }
