--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.14",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
@@ -49,6 +50,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
