--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/inter": "^5.0.17",
     "@fontsource-variable/jetbrains-mono": "^5.0.20",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
