--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 az-devops = { path = "../az-devops" }
+milltime = { path = "../milltime" }
 dotenvy = "0.15.7"
 itertools = "0.12.0"
 serde = { version = "1.0.193", features = ["derive"] }
