--- a/milltime/Cargo.toml
+++ b/milltime/Cargo.toml
@@ -16,3 +16,4 @@ thiserror = "1.0.56"
 reqwest = { version = "0.11.23", features = ["json", "cookies", "multipart"] }
 axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
 chrono = { version = "0.4.38", features = ["serde"] }
+base64 = "0.22.1"
