--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.108"
 serde_with = "3.4.0"
 tokio = { version = "1.35.1", features = ["full"] }
 time = { version = "0.3.31", features = ["serde", "parsing"] }
+chrono = { version = "0.4.38", features = ["serde"] }
 axum = { version = "0.7.3", features = ["ws", "macros"] }
 axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
 config = "0.13.4"
