--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 az-devops = { path = "../az-devops" }
+milltime = { path = "../milltime" }
 dotenvy = "0.15.7"
 itertools = "0.12.0"
 serde = { version = "1.0.193", features = ["derive"] }
@@ -14,6 +15,7 @@ serde_json = "1.0.108"
 serde_with = "3.4.0"
 tokio = { version = "1.35.1", features = ["full"] }
 time = { version = "0.3.31", features = ["serde", "parsing"] }
+chrono = { version = "0.4.38", features = ["serde"] }
 axum = { version = "0.7.3", features = ["ws", "macros"] }
 axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
 config = "0.13.4"
@@ -45,3 +47,4 @@ reqwest = { version = "0.11.23", features = ["json"] }
 async-trait = "0.1.77"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 web-push = "0.10.1"
+url = "2.5.0"
