--- a/toki-api/config/production.yaml
+++ b/toki-api/config/production.yaml
@@ -2,6 +2,7 @@ application:
   host: "0.0.0.0"
   app_url: "https://toki2.ponbac.xyz"
   api_url: "https://toki2-api.ponbac.xyz"
+  cookie_domain: ".ponbac.xyz"
   disable_auth: false
 database:
   require_ssl: true
