--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -48,3 +48,5 @@ async-trait = "0.1.77"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 web-push = "0.10.1"
 url = "2.5.0"
+aes-gcm = "0.10.3"
+base64 = "0.22.1"
