--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.56.2",
@@ -39,6 +40,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.5.4",
+    "jotai": "^2.10.0",
     "ky": "^1.7.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
