--- a/app/package.json
+++ b/app/package.json
@@ -37,14 +37,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "0.2.1",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.5.4",
     "jotai": "^2.10.0",
     "ky": "^1.7.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
-    "react-day-picker": "^9.0.9",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
