--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/eslint-plugin-router": "^1.92.7",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
