--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["toki-api", "az-devops", "milltime"]
+members = ["toki-api", "az-devops", "milltime", "issue-cli"]
