--- a/az-devops/Cargo.toml
+++ b/az-devops/Cargo.toml
@@ -13,6 +13,7 @@ azure_devops_rust_api = { version = "0.28.0", features = [
     "wit",
     "graph",
 ] }
+futures = "0.3.31"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 time = { version = "0.3.31", features = ["serde", "parsing"] }
