--- a/az-devops/Cargo.toml
+++ b/az-devops/Cargo.toml
@@ -16,8 +16,10 @@ azure_devops_rust_api = { version = "0.28.0", features = [
 futures = "0.3.31"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+thiserror = "2.0.12"
 time = { version = "0.3.31", features = ["serde", "parsing"] }
 tracing = { version = "0.1.40", features = ["attributes"] }
+typespec = "0.4.0"
 
 [dev-dependencies]
 dotenvy = "0.15.7"
