--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -51,3 +51,8 @@ url = "2.5.0"
 aes-gcm = "0.10.3"
 base64 = "0.22.1"
 strum_macros = "0.26.4"
+sha2 = "0.10.8"
+mime = "0.3.17"
+mime_guess = "2.0.4"
+bytes = "1.5.0"
+md5 = "0.7.0"
