--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -24,4 +24,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          model: github-copilot/gpt-5-codex
+          model: github-copilot/gpt-5
