deps: update bytes to 1.11.1, ignore idna advisory (transitive dep)

--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -2,7 +2,13 @@
 # https://rustsec.org/
 
 [advisories]
-# Ignore RSA timing sidechannel (Marvin Attack) - no patch available yet.
-# Risk accepted: only used for web-push signatures, attack requires
-# network observation of many signing operations.
-ignore = ["RUSTSEC-2023-0071"]
+ignore = [
+    # RSA timing sidechannel (Marvin Attack) - no patch available yet.
+    # Risk accepted: only used for web-push signatures, attack requires
+    # network observation of many signing operations.
+    "RUSTSEC-2023-0071",
+    
+    # idna Punycode handling - transitive dep via cookie_store -> reqwest@0.11.
+    # Can't update without changing reqwest versions. Low risk for this use case.
+    "RUSTSEC-2024-0421",
+]
