--- a/toki-tui/Cargo.toml
+++ b/toki-tui/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
 
 # Time handling (same as toki-api)
-time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
+time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros", "local-offset"] }
 
 # Error handling
 anyhow = "1.0"
