--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -26,6 +26,7 @@ tracing-subscriber = { version = "0.3.18", features = [
     "local-time",
 ] }
 htmd = "0.5"
+ammonia = "4.1.2"
 futures = "0.3.30"
 futures-util = { version = "0.3.30", default-features = false, features = [
     "sink",
