--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -25,6 +25,8 @@ tracing-subscriber = { version = "0.3.18", features = [
     "time",
     "local-time",
 ] }
+htmd = "0.5"
+ammonia = "4.1.2"
 futures = "0.3.30"
 futures-util = { version = "0.3.30", default-features = false, features = [
     "sink",
