--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT:-5433}:5432
     volumes:
       - toki-psql-data:/var/lib/postgresql/data
     healthcheck:
