--- a/toki-api/config/production.yaml
+++ b/toki-api/config/production.yaml
@@ -1,5 +1,6 @@
 application:
   host: "0.0.0.0"
+  port: 8080
   app_url: "https://toki.spinit.se"
   api_url: "https://toki-api.spinit.se"
   cookie_domain: ".spinit.se"
