--- a/toki-tui/Cargo.toml
+++ b/toki-tui/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 # TUI framework
-ratatui = "0.26"
-crossterm = "0.27"
+ratatui = "0.30"
+crossterm = "0.29"
+tui-piechart = "0.3.0"
 
 # Async runtime
 tokio = { version = "1", features = ["full"] }
