--- a/toki-tui/Cargo.toml
+++ b/toki-tui/Cargo.toml
@@ -28,6 +28,7 @@ dotenvy = "0.15"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 # Fuzzy matching
 fuzzy-matcher = "0.3"
