--- a/toki-tui/Cargo.toml
+++ b/toki-tui/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 ratatui = "0.30"
 crossterm = "0.29"
 tui-piechart = "0.3.0"
+throbber-widgets-tui = "0.11"
 
 # Async runtime
 tokio = { version = "1", features = ["full"] }
@@ -39,6 +40,13 @@ serde_json = "1.0"
 
 # Fuzzy matching
 fuzzy-matcher = "0.3"
+
+# URL encoding
+urlencoding = "2"
+axum-login = "0.18.0"
+
+# Password input (no echo)
+rpassword = "7"
 
 [profile.release]
 opt-level = 3
