tui code clean up

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,6 +7,7 @@ on:
       - "toki-api/**"
       - "az-devops/**"
       - "milltime/**"
+      - "toki-tui/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - ".github/workflows/backend.yml"
@@ -15,6 +16,7 @@ on:
       - "toki-api/**"
       - "az-devops/**"
       - "milltime/**"
+      - "toki-tui/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - ".github/workflows/backend.yml"
