--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,21 @@
 [workspace]
 resolver = "2"
 members = ["toki-api", "az-devops", "milltime", "toki-tui"]
+
+[workspace.dependencies]
+anyhow = "1.0"
+base64 = "0.22.1"
+chrono = { version = "0.4.38", features = ["serde"] }
+config = "0.14.0"
+dotenvy = "0.15.7"
+reqwest = { version = "0.12.28", default-features = true }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+time = { version = "0.3.47", features = ["serde", "parsing"] }
+tokio = { version = "1.49.0", features = ["full"] }
+tracing = { version = "0.1.40", features = ["attributes"] }
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
