--- a/milltime/Cargo.toml
+++ b/milltime/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.108"
-tokio = { version = "1.35.1", features = ["full"] }
-dotenvy = "0.15.7"
-time = { version = "0.3.47", features = ["serde", "parsing"] }
-tracing = { version = "0.1.40", features = ["attributes"] }
+serde.workspace = true
+serde_json.workspace = true
+tokio.workspace = true
+dotenvy.workspace = true
+time.workspace = true
+tracing.workspace = true
 thiserror = "1.0.56"
-reqwest = { version = "0.11.23", features = ["json", "cookies", "multipart"] }
+reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }
 axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-base64 = "0.22.1"
+chrono.workspace = true
+base64.workspace = true
 
 [lints.clippy]
 too_many_arguments = "allow"
