--- a/toki-api/Cargo.toml
+++ b/toki-api/Cargo.toml
@@ -8,18 +8,18 @@ edition = "2021"
 [dependencies]
 az-devops = { path = "../az-devops" }
 milltime = { path = "../milltime" }
-dotenvy = "0.15.7"
+dotenvy.workspace = true
 itertools = "0.13.0"
-serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.108"
+serde.workspace = true
+serde_json.workspace = true
 serde_with = "3.4.0"
-tokio = { version = "1.35.1", features = ["full"] }
-time = { version = "0.3.47", features = ["serde", "parsing"] }
-chrono = { version = "0.4.38", features = ["serde"] }
+tokio.workspace = true
+time.workspace = true
+chrono.workspace = true
 axum = { version = "0.7.3", features = ["ws", "macros", "multipart"] }
 axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
-config = "0.14.0"
-tracing = { version = "0.1.40", features = ["attributes"] }
+config.workspace = true
+tracing.workspace = true
 tracing-subscriber = { version = "0.3.18", features = [
     "env-filter",
     "time",
@@ -45,13 +45,13 @@ sqlx = { version = "0.8.0", features = [
 axum-login = "0.16.0"
 thiserror = "1.0"
 oauth2 = "4.4.2"
-reqwest = { version = "0.12.5", features = ["json"] }
+reqwest = { workspace = true, features = ["json"] }
 async-trait = "0.1.77"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 web-push = "0.10.1"
 url = "2.5.0"
 aes-gcm = "0.10.3"
-base64 = "0.22.1"
+base64.workspace = true
 strum_macros = "0.26.4"
 tower-sessions-moka-store = "0.14"
 tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }
