--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 config = "0.14.0"
 dotenvy = "0.15.7"
-reqwest = { version = "0.12.28", default-features = true }
+reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 time = { version = "0.3.47", features = ["serde", "parsing"] }
