--- a/az-devops/Cargo.toml
+++ b/az-devops/Cargo.toml
@@ -17,7 +17,7 @@ azure_devops_rust_api = { version = "0.28.0", features = [
 ] }
 serde.workspace = true
 serde_json.workspace = true
-reqwest = { workspace = true, features = ["json", "rustls-tls"] }
+reqwest = { workspace = true, features = ["json"] }
 thiserror = "2.0.12"
 time.workspace = true
 tokio.workspace = true
